# Dev_VideoLx

./: CMakeLists.txt  CMakeSettings.json  Dev_VideoLx.sln  README.md
CommonLib/: CMakeLists.txt  CommonLib.vcxproj  CommonLib.vcxproj.filters  someVideoParms.cpp  someVideoParms.h  stdafx.h
ConsoleApplication1/: ConsoleApplication1.vcxproj
Files/: Video_Parms.txt
Test/: CMakeLists.txt  CmdLineExec.cpp  Test.vcxproj  Test.vcxproj.filters
VTest/: CMakeLists.txt  Main.cpp  VTest.vcxproj
VThread1/: CMakeLists.txt  VThread1.vcxproj  VThread1.vcxproj.filters  someVideoThread_thread.cpp
VidTest/: CMakeLists.txt  CmdLineExec.cpp  CmdLineExec.h  Main.cpp  MainInit.cpp  VidTest.vcxproj  someTimerThread.cpp  someTimerThread.h  someVideoThread.h  someVideoThread_thread.cpp  someVideoThread_utils.cpp  someVideoThread_video1.cpp
Video1/: CMakeLists.txt  Main.cpp  Video1.vcxproj
Video2/: CMakeLists.txt  Main.cpp  Video2.vcxproj  stdafx.h
